--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,35 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Environment folders
+.env/
+venv/
+env/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Logs and outputs
+*.log
+output.avi
+violations_log.csv
+
+# Evidence folder
+evidence/
+
+# YOLO weights and models
+yolov8n.pt
+*.pt
+
+# IDE settings
+.vscode/
+.idea/
+
+# Other temporary files
+*.swp
+*.swo
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
